save init test progress